--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "expect.js": "^0.3.1",
     "mocha": "^5.0.0"
   }
 }
