--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gp-challenge",
   "version": "1.0.0",
   "description": "challenge",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch"
